Fixing bug with first model and removing duplicate imports

--- a/Challenge ANAP.ipynb
+++ b/Challenge ANAP.ipynb
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -566,7 +566,7 @@
        "4   2008  0.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -660,7 +660,7 @@
        "4  CLINIQUE AMBULATOIRE CENDANEG   1       0           2   2008  0.000000"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -784,7 +784,7 @@
        "4   1       0           2   2008  0.000000         1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -841,8 +841,8 @@
     "df_train = train.iloc[:N_split]\n",
     "df_test = train.iloc[N_split:]\n",
     "\n",
-    "ytrain = df_train[['Target']]\n",
-    "ytest = df_test[['Target']]\n",
+    "ytrain = np.asarray(df_train['Target'], dtype=\"|S6\")\n",
+    "ytest = np.asarray(df_train['Target'], dtype=\"|S6\")\n",
     "\n",
     "df_train = df_train.drop('Target', axis=1)\n",
     "df_test = df_test.drop('Target', axis=1)"
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -910,28 +910,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
-       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
-       "          verbose=0, warm_start=False)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "lr = LogisticRegression()\n",
+    "lr = LogisticRegression(n_jobs = -1)\n",
     "lr.fit(xtrain,ytrain)"
    ]
   },
@@ -944,22 +929,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "auc:      0.6971591697069642\n",
-      "log_loss: 0.2242177135561031\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sklearn.metrics import roc_auc_score, log_loss\n",
     "lr_preds = lr.predict_proba(xtest)[:,1]\n",
     "print(\"auc:      {}\".format(roc_auc_score(ytest, lr_preds)))\n",
     "print(\"log_loss: {}\".format(log_loss(ytest,lr_preds)))"
@@ -994,7 +969,6 @@
     }
    ],
    "source": [
-    "from sklearn.svm import LinearSVC\n",
     "svm = LinearSVC()\n",
     "svm.fit(xtrain,ytrain)"
    ]
@@ -1052,19 +1026,9 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble import GradientBoostingClassifier\n",
     "gbm = GradientBoostingClassifier(loss='exponential')\n",
     "gbm.fit(xtrain,ytrain)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1213,7 +1177,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
     "plt.plot(aucs)\n",
     "plt.title(\"AUCs for cumulated boosts until `n_estimators`\")\n",
     "plt.xlabel(\"number of trees\")\n",
@@ -1253,7 +1216,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
     "# sort importances\n",
     "indices = np.argsort(gbm.feature_importances_)\n",
     "# plot as bar chart\n",
@@ -1281,7 +1243,6 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble.partial_dependence import plot_partial_dependence\n",
     "features =  [u'RevolvingUtilizationOfUnsecuredLines',\n",
     "             u'age',\n",
     "             u'NumberOfTime30-59DaysPastDueNotWorse',\n",
@@ -1326,8 +1287,6 @@
     }
    ],
    "source": [
-    "from itertools import combinations\n",
-    "\n",
     "_ = plot_partial_dependence(gbm, xtrain, combinations(top4,2),\n",
     "                        feature_names=features_names, figsize=(15,15))"
    ]
@@ -1683,14 +1642,8 @@
     }
    ],
    "source": [
-    "import multiprocessing\n",
     "num_cores = multiprocessing.cpu_count()\n",
-    "from sklearn.cross_validation import KFold\n",
     "kf = list(KFold(len(xtrain),num_cores))\n",
-    "\n",
-    "from joblib import Parallel, delayed  \n",
-    "\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "def fit_model(traini):\n",
     "    rfc = RandomForestClassifier()\n",
@@ -17755,8 +17708,6 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.cross_validation import cross_val_score\n",
     "#Uncomment the following for GridSearch: can take 1+ hour\n",
     "#from sklearn.grid_search import GridSearchCV\n",
     "#gs = GridSearchCV(RandomForestClassifier(n_jobs=-1), \n",
