--- a/process_hd.ipynb
+++ b/process_hd.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -17,21 +17,18 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "categorical_mapping = {'.z' : -3,\n",
-    "                       '.c' : -2,\n",
-    "                       '.m' : -1\n",
-    "                      }\n",
+    "missing_values_mapping = {'.z' : -3, '.c' : -2, '.m' : -1}\n",
     "\n",
     "def mapping(x):\n",
     "    try:\n",
-    "        return categorical_mapping[x]\n",
+    "        return missing_values_mapping[x]\n",
     "    except:\n",
     "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -41,38 +38,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "processing 2008\n",
-      "\n",
-      "done 2008\n",
-      "\n",
-      "processing 2009\n",
-      "\n",
-      "done 2009\n",
-      "\n",
-      "processing 2010\n",
-      "\n",
-      "done 2010\n",
-      "\n",
-      "processing 2011\n",
-      "\n",
-      "done 2011\n",
-      "\n",
-      "processing 2012\n",
-      "\n",
-      "done 2012\n",
-      "\n",
-      "processing 2013\n",
-      "\n",
-      "done 2013\n",
-      "\n",
-      "processing 2014\n",
-      "\n",
-      "done 2014\n",
-      "\n",
-      "processing 2015\n",
-      "\n",
-      "done 2015\n",
-      "\n"
+      "Année 2008 traitée\n",
+      "Année 2009 traitée\n",
+      "Année 2010 traitée\n",
+      "Année 2011 traitée\n",
+      "Année 2012 traitée\n",
+      "Année 2013 traitée\n",
+      "Année 2014 traitée\n",
+      "Année 2015 traitée\n"
      ]
     }
    ],
@@ -82,45 +55,18 @@
     "aggregated_dataframes = {}\n",
     "\n",
     "for y in years:\n",
-    "    print('processing ', y)\n",
-    "    data_hd = pd.read_csv('../data/hospidiag_opendata_' + y + '.csv', encoding='utf-8', sep=';')\n",
+    "    df = pd.read_csv('../data/hospidiag_opendata_' + y + '.csv', encoding='utf-8', sep=';')\n",
     "\n",
-    "    for col in data_hd.columns:\n",
-    "        data_hd[col] = data_hd[col].map(mapping)\n",
+    "    for col in df.columns:\n",
+    "        df[col] = df[col].map(mapping)\n",
     "\n",
-    "    data_hd.fillna(-4, inplace=True)\n",
-    "    data_hd['annee'] = y\n",
-    "    aggregated_dataframes[y] = data_hd\n",
-    "    print('done ', y)\n",
+    "    df.fillna(-4, inplace=True)\n",
+    "    df['annee'] = y\n",
+    "    aggregated_dataframes[y] = df\n",
+    "    print('Année', y, 'traitée')\n",
     "\n",
     "result = pd.concat(aggregated_dataframes)\n",
-    "result.to_csv(os.path.join(data_folder, 'data_hd.csv'), encoding='utf-8', sep=';')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[WinError 3] Le chemin d’accès spécifié est introuvable: '../data/hospidiag_opendata_\\\\2008'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-98d594c85968>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mdata_folder\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'../data/'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'2008'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata_folder\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'hospidiag_opendata_'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [WinError 3] Le chemin d’accès spécifié est introuvable: '../data/hospidiag_opendata_\\\\2008'"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "data_folder = '../data/'\n",
-    "y = '2008'\n",
-    "os.listdir(os.path.join(data_folder, 'hospidiag_opendata_', y))"
+    "result.to_csv('aggregated_hospidiag_data.csv', encoding='utf-8', sep=';')"
    ]
   },
   {
@@ -131,7 +77,7 @@
    },
    "outputs": [],
    "source": [
-    "data_hd = pd.read_csv('../data/hospidiag_opendata_' + y + '.csv', encoding='utf-8', sep=';')"
+    "df = pd.read_csv('../data/hospidiag_opendata_' + y + '.csv', encoding='utf-8', sep=';')"
    ]
   },
   {
@@ -329,7 +275,7 @@
     }
    ],
    "source": [
-    "data_hd.head()"
+    "df.head()"
    ]
   },
   {
