--- a/Challenge ANAP.ipynb
+++ b/Challenge ANAP.ipynb
@@ -859,6 +859,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Nombre d'arbres à tester\n",
+    "params = [i for i in range(1,20,1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Méthode permettant l'entraînement et l'évaluation des modèles, ainsi que l'affichage des résultats\n",
+    "def show_errors(X_train, y_train, X_valid, y_valid, criterion, error) :\n",
+    "    train_scores = []\n",
+    "    validation_scores = []\n",
+    "    j = 0\n",
+    "    \n",
+    "    for i in params:\n",
+    "        regressor = RandomForestRegressor(n_estimators=20, max_depth = i, n_jobs=-1, criterion='mse') \n",
+    "        regressor.fit(X_train, y_train)\n",
+    "\n",
+    "        # CHANGER LE CALCUL DES SCORES !!!\n",
+    "        train_scores.append(mean_squared_error(regressor.predict(X_train), y_train))\n",
+    "        validation_scores.append(mean_squared_error(regressor.predict(X_valid), y_valid))\n",
+    "        print(i)\n",
+    "        print('training set: ', train_scores[j])\n",
+    "        print('validation set: ', validation_scores[j])\n",
+    "        j = j + 1\n",
+    "    \n",
+    "    # Visualisation des résultats\n",
+    "    plt.figure(figsize=(15,8))\n",
+    "\n",
+    "    plt.plot(nb_trees, train_scores, c='b') \n",
+    "    plt.plot(nb_trees, validation_scores, c='r') \n",
+    "    \n",
+    "    plt.title(\"%s en fonction du nombre d'arbres\" % error)\n",
+    "    plt.xlabel(\"Profondeur maximale de l'arbre\")\n",
+    "    plt.ylabel(\"%s\" % error)\n",
+    "    plt.legend([\"Apprentissage\", \"Validation\"], loc='upper right')\n",
+    "\n",
+    "    plt.show()\n",
+    "    \n",
+    "    return validation_scores "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "temp = show_errors(xtrain, ytrain, xtest, ytest, \"mse\", \"Mean Squared Error\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {
     "collapsed": false
@@ -1010,7 +1075,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
