Added new files for preprocessing

--- a/Challenge ANAP.ipynb
+++ b/Challenge ANAP.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -105,114 +105,107 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10007300</td>\n",
-       "      <td>CLINIQUE AMBULATOIRE CENDANEG</td>\n",
-       "      <td>01-Ain</td>\n",
-       "      <td>D01-Digestif</td>\n",
-       "      <td>&lt;=75 ans</td>\n",
-       "      <td>19</td>\n",
-       "      <td>1061</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>0.010624</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10007300</td>\n",
-       "      <td>CLINIQUE AMBULATOIRE CENDANEG</td>\n",
-       "      <td>01-Ain</td>\n",
-       "      <td>D01-Digestif</td>\n",
-       "      <td>&gt;75 ans</td>\n",
-       "      <td>5</td>\n",
-       "      <td>48</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>0.053320</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>10007300</td>\n",
-       "      <td>CLINIQUE AMBULATOIRE CENDANEG</td>\n",
-       "      <td>01-Ain</td>\n",
-       "      <td>D07-Cardio-vasculaire (hors cathétérismes vasc...</td>\n",
+       "      <th>1879837</th>\n",
+       "      <td>970466751</td>\n",
+       "      <td>SARL AVICENNE</td>\n",
+       "      <td>976-Mayotte</td>\n",
+       "      <td>D11-Ophtalmologie</td>\n",
        "      <td>&lt;=75 ans</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>10007300</td>\n",
-       "      <td>CLINIQUE AMBULATOIRE CENDANEG</td>\n",
-       "      <td>01-Ain</td>\n",
-       "      <td>D16-Hématologie</td>\n",
+       "      <th>1879838</th>\n",
+       "      <td>970466751</td>\n",
+       "      <td>SARL AVICENNE</td>\n",
+       "      <td>Inconnu</td>\n",
+       "      <td>D02-Orthopédie traumatologie</td>\n",
        "      <td>&lt;=75 ans</td>\n",
        "      <td>0</td>\n",
-       "      <td>17</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10007300</td>\n",
-       "      <td>CLINIQUE AMBULATOIRE CENDANEG</td>\n",
-       "      <td>01-Ain</td>\n",
-       "      <td>D16-Hématologie</td>\n",
+       "      <th>1879839</th>\n",
+       "      <td>970466751</td>\n",
+       "      <td>SARL AVICENNE</td>\n",
+       "      <td>Inconnu</td>\n",
+       "      <td>D11-Ophtalmologie</td>\n",
+       "      <td>&lt;=75 ans</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1879840</th>\n",
+       "      <td>970466751</td>\n",
+       "      <td>SARL AVICENNE</td>\n",
+       "      <td>Inconnu</td>\n",
+       "      <td>D11-Ophtalmologie</td>\n",
        "      <td>&gt;75 ans</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1879841</th>\n",
+       "      <td>970466751</td>\n",
+       "      <td>SARL AVICENNE</td>\n",
+       "      <td>Inconnu</td>\n",
+       "      <td>D20-Tissu cutané et tissu sous-cutané</td>\n",
+       "      <td>&lt;=75 ans</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Finess                 Raison sociale  \\\n",
-       "0  10007300  CLINIQUE AMBULATOIRE CENDANEG   \n",
-       "1  10007300  CLINIQUE AMBULATOIRE CENDANEG   \n",
-       "2  10007300  CLINIQUE AMBULATOIRE CENDANEG   \n",
-       "3  10007300  CLINIQUE AMBULATOIRE CENDANEG   \n",
-       "4  10007300  CLINIQUE AMBULATOIRE CENDANEG   \n",
+       "            Finess Raison sociale Provenance des patients (département)  \\\n",
+       "1879837  970466751  SARL AVICENNE                           976-Mayotte   \n",
+       "1879838  970466751  SARL AVICENNE                               Inconnu   \n",
+       "1879839  970466751  SARL AVICENNE                               Inconnu   \n",
+       "1879840  970466751  SARL AVICENNE                               Inconnu   \n",
+       "1879841  970466751  SARL AVICENNE                               Inconnu   \n",
        "\n",
-       "  Provenance des patients (département)  \\\n",
-       "0                                01-Ain   \n",
-       "1                                01-Ain   \n",
-       "2                                01-Ain   \n",
-       "3                                01-Ain   \n",
-       "4                                01-Ain   \n",
+       "                          Domaines d activités  \\\n",
+       "1879837                      D11-Ophtalmologie   \n",
+       "1879838           D02-Orthopédie traumatologie   \n",
+       "1879839                      D11-Ophtalmologie   \n",
+       "1879840                      D11-Ophtalmologie   \n",
+       "1879841  D20-Tissu cutané et tissu sous-cutané   \n",
        "\n",
-       "                                Domaines d activités  \\\n",
-       "0                                       D01-Digestif   \n",
-       "1                                       D01-Digestif   \n",
-       "2  D07-Cardio-vasculaire (hors cathétérismes vasc...   \n",
-       "3                                    D16-Hématologie   \n",
-       "4                                    D16-Hématologie   \n",
+       "        âge (deux classes >75 ans, <= 75 ans)  \\\n",
+       "1879837                              <=75 ans   \n",
+       "1879838                              <=75 ans   \n",
+       "1879839                              <=75 ans   \n",
+       "1879840                               >75 ans   \n",
+       "1879841                              <=75 ans   \n",
        "\n",
-       "  âge (deux classes >75 ans, <= 75 ans)  \\\n",
-       "0                              <=75 ans   \n",
-       "1                               >75 ans   \n",
-       "2                              <=75 ans   \n",
-       "3                              <=75 ans   \n",
-       "4                               >75 ans   \n",
+       "         Nombre de séjours/séances MCO des patients en ALD  \\\n",
+       "1879837                                                  0   \n",
+       "1879838                                                  0   \n",
+       "1879839                                                  0   \n",
+       "1879840                                                  0   \n",
+       "1879841                                                  0   \n",
        "\n",
-       "   Nombre de séjours/séances MCO des patients en ALD  \\\n",
-       "0                                                 19   \n",
-       "1                                                  5   \n",
-       "2                                                  0   \n",
-       "3                                                  0   \n",
-       "4                                                  0   \n",
-       "\n",
-       "   Nombre total de séjours/séances  annee    cible1  \n",
-       "0                             1061   2008  0.010624  \n",
-       "1                               48   2008  0.053320  \n",
-       "2                                1   2008  0.000000  \n",
-       "3                               17   2008  0.000000  \n",
-       "4                                2   2008  0.000000  "
+       "         Nombre total de séjours/séances  annee  cible1  \n",
+       "1879837                                1   2013     0.0  \n",
+       "1879838                                1   2013     0.0  \n",
+       "1879839                               12   2013     0.0  \n",
+       "1879840                                1   2013     0.0  \n",
+       "1879841                                2   2013     0.0  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +213,7 @@
    "source": [
     "train = pd.read_csv('../data/data2.csv', sep=';')\n",
     "additional_data = pd.read_csv('../data/aggregated_hospidiag_data_reduced.csv', sep=';')\n",
-    "train.head(5)"
+    "train.tail(5)"
    ]
   },
   {
